--- a/clientscoiffmanager/src/main/AndroidManifest.xml
+++ b/clientscoiffmanager/src/main/AndroidManifest.xml
@@ -7,17 +7,17 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
     <application
-        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        android:allowBackup="true"
+        android:restoreAnyVersion="true"
         android:backupAgent="BoorceCCMBackupAgent">
         <activity
             android:name=".ClientActivity"
             android:label="@string/title_activity_client" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
